name:                respond
version:             0.1.0.0
synopsis:            a simple Haskell web service framework (barely) that sits on top of WAI
description:         a simple Haskell web service framework (barely) that sits on top of WAI
homepage:            http://github.com/raptros/respond
license:             BSD3
license-file:        LICENSE
author:              aidan coyne
maintainer:          coynea90@gmail.com
copyright:           2014, aidan coyne
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/raptros/respond.git

library
    ghc-options:
        -Wall
    default-extensions:
        OverloadedStrings
    default-language:
        Haskell2010
    hs-source-dirs:
        src
    exposed-modules:
        Web.Respond
        Web.Respond.Types
        Web.Respond.Monad
        Web.Respond.Response
        Web.Respond.DefaultHandlers
        Web.Respond.Request
        Web.Respond.HListUtils
        Web.Respond.Path
        Web.Respond.DefaultServer
        Web.Respond.Run
    build-depends:
        base >=4.7 && <4.8,
        transformers-base == 0.4.*,
        monad-control == 0.3.*,
        data-default-class,
        exceptions >= 0.6 && < 0.7,
        fast-logger == 2.*,
        transformers == 0.4.*,
        safe >= 0.3 && < 0.4,
        containers == 0.5.5.*,
        text >= 1.2 && < 1.3,
        bytestring >= 0.10 && < 0.11,
        monad-logger >= 0.3.8 && < 0.3.9,
        wai >= 3.0 && < 4.0,
        wai-extra >= 3.0 && < 4.0,
        warp >= 3.0 && < 4.0,
        HList >= 0.3 && < 0.4,
        http-types >= 0.8 && < 0.9,
        path-pieces >= 0.1 && <= 0.2,
        unordered-containers >= 0.2 && < 0.3,
        template-haskell == 2.9.*,    
        mtl >= 2.2 && < 2.3, 
        aeson == 0.8.*,
        lens >= 4.6 && < 4.7

executable example
    ghc-options:
        -Wall
    default-extensions:
        OverloadedStrings
    default-language:
        Haskell2010
    hs-source-dirs:
        example
    main-is:
        Main.hs
    build-depends:
        base,
        respond,
        wai,
        aeson,
        http-types,
        text,
        fast-logger
